--- a/Update Dashboard Using API.ipynb
+++ b/Update Dashboard Using API.ipynb
@@ -87,7 +87,8 @@
    },
    "outputs": [],
    "source": [
-    "d_new['pages'][0]['layout'][0]['widget']['spec']['encodings'].get('color', {}).get('scale', {}).get('mappings', {})"
+    "d_new['pages'][0]['layout'][0]['widget']['spec']['encodings'].get('color', {}).get('scale', {}).get('mappings', {})\n",
+    "\n"
    ]
   },
   {
