--- a/Update Dashboard Using API.ipynb
+++ b/Update Dashboard Using API.ipynb
@@ -59,9 +59,11 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "from databricks.sdk import WorkspaceClient\n",
     "from databricks.sdk.service import dashboards\n",
     "\n",
+    "#Load the current dashbaord object and obtain the json\n",
     "import json\n",
     "w = WorkspaceClient()\n",
     "old_dashboard = w.lakeview.get(DASHBOARD_ID)\n",
@@ -87,8 +89,8 @@
    },
    "outputs": [],
    "source": [
-    "d_new['pages'][0]['layout'][0]['widget']['spec']['encodings'].get('color', {}).get('scale', {}).get('mappings', {})\n",
-    "\n"
+    "#print the current color mapping\n",
+    "d_new['pages'][0]['layout'][0]['widget']['spec']['encodings'].get('color', {}).get('scale', {}).get('mappings', {})"
    ]
   },
   {
@@ -135,6 +137,7 @@
    },
    "outputs": [],
    "source": [
+    "# update the dashboard. Also you can change the dashboard name to show the update\n",
     "w.lakeview.update(DASHBOARD_ID,\n",
     "  dashboards.Dashboard(\n",
     "    dashboard_id=DASHBOARD_ID,\n",
